--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "dat.gui": "^0.7.7",
-    "three": "^0.126.1"
+    "three": "^0.126.1",
+    "three-globe": "^2.17.3"
   }
 }
