--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "parcel-bundler": "^1.12.5"
   },
   "dependencies": {
+    "animejs": "^3.2.1",
     "dat.gui": "^0.7.7",
     "three": "^0.126.1",
     "three-globe": "^2.17.3"
