--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "modern-css-reset": "^1.4.0",
-    "parcel-bundler": "^1.12.5"
+    "parcel-bundler": "^1.12.5",
+    "posthtml-modules": "^0.7.4"
   },
   "dependencies": {
     "animejs": "^3.2.1",
