:sparkles: Add paths, refactor stuff

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dat.gui": "^0.7.7",
     "deep-diff": "^1.0.2",
     "three": "^0.126.1",
-    "three-globe": "^2.18.0"
+    "three-globe": "^2.18.0",
+    "uid": "^2.0.0"
   }
 }
